Profile is done but have some error with it as it is not as I wanted Id generator UUID is installed which generates id for the alert components did some changes with the CSS property Day: 3

--- a/Client/facebookclone/package.json
+++ b/Client/facebookclone/package.json
@@ -15,9 +15,12 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux-devtools-extension": "^2.13.9",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "compile:sass": "node-sass sass/main.scss css/style.css -w",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
