--- a/Server/package.json
+++ b/Server/package.json
@@ -5,16 +5,22 @@
   "main": "server.js",
   "type": "module",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-validator": "^6.12.0",
     "helmet": "^4.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.14",
     "nodemon": "^2.0.7"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "concurrently": "^6.2.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "client": "npm start --prefix Client/facebookclone",
+    "dev": "concurrently\"npm run server\"\"npm run client\"",
+    "server": "nodemon server.js"
   },
   "author": "",
   "license": "MIT"
