--- a/Client/facebookclone/src/package.json
+++ b/Client/facebookclone/src/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node-sass": "^6.0.1"
+    "node-sass": "^6.0.1",
+    "react-redux": "^7.2.4"
   }
 }
