--- a/Client/facebookclone/src/package.json
+++ b/Client/facebookclone/src/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "node-sass": "^6.0.1",
+    "react-moment": "^1.1.1",
     "react-redux": "^7.2.4"
   }
 }
